# hbs-cli

./: CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.org  groups  project.config
.github/workflows/: rust.yml
fixtures/: data.yaml  out.txt  out_no_registration.txt  out_standalone.txt  standalone.hbs  template.hbs  test.sh
fixtures/more/: a.hbs  b.hbs  c.hbs
spec/: Base_usage.command  Base_usage_to_stdout.command  Base_usage_to_stdout.expected  Partials_registration.command  Partials_registration.expected  run-tests.sh
spec/fixtures/more/: b.hbs
src/: lib.rs  main.rs
