[package]
name = "hbs-cli"
description = "Simple CLI for generating text from handlebars templates, by feeding them with data from file YAML/JSON."
version = "0.2.1"
authors = [ "Jakub A. Gramsz <jakub@gramsz.com>" ]
homepage = "https://github.com/olorin37/hbs-cli"
repository = "https://github.com/olorin37/hbs-cli"
documentation = "https://docs.rs/crate/hbs-cli"
readme = "README.md"
keywords = ["handlebars", "templating", "cli", "YAML", "JSON"]
categories = ["command-line-interface", "command-line-utilities", "value-formatting"]
license = "MIT"
edition = "2018"

[dependencies]
structopt = "0.3.26"
handlebars = "3.5.5"
serde = "1.0.154"
serde_yaml = "0.8.26"
glob = "0.3.1"
